front add picture

--- a/app/assets/stylesheets/components/add_an_image_form.scss
+++ b/app/assets/stylesheets/components/add_an_image_form.scss
@@ -1,3 +1,20 @@
 .button-analyser {
   text-align: center;
 }
+
+.add-fridge {
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: 'Manrope', sans-serif;
+}
+
+.pic-form {
+  background-color: rgba(251, 221, 186, 0.95);
+  padding: 25px;
+  border-radius: 16px;
+  margin-left: 12px;
+  align-items: center;
+  height: 380px;
+  width: 366px;
+}
