--- a/app/assets/stylesheets/pages/_show_recipe.scss
+++ b/app/assets/stylesheets/pages/_show_recipe.scss
@@ -117,8 +117,7 @@
   text-align: center;
   font-weight: bold;
   font-size: 18px;
-  font-family: 'Darumadrop One', sans-serif;
-}
+  font-family: 'Darumadrop One', sans-serif;}
 
 .image-recipe{
   width:150px;
