--- a/app/assets/stylesheets/components/_ingredient_form.scss
+++ b/app/assets/stylesheets/components/_ingredient_form.scss
@@ -181,12 +181,12 @@ input::placeholder {
 }
 
 .loader-overlay {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   top: 0px;
   position: absolute;
   z-index: 1500;
   width: 100vw;
-  height: 100vh;
+  // height: 100vh;
   display: flex;
   flex-direction: column;
   /* align-content: space-between; */
