--- a/app/views/ingredients/_results.html.erb
+++ b/app/views/ingredients/_results.html.erb
@@ -1,6 +1,11 @@
+
 <% ingredients.each do |ingredient| %>
-  <div class="my-5">
-    <h3><%= ingredient["name"] %></h3>
-    <%= link_to "+", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] } %>
+  <div class="col-12 col-sm-6 col-md-4">
+    <div class="card_design" id="ingredient-card">
+      <h2 class="title_layout pl-5"><%= ingredient["name"] %></h2>
+    </div>
+    <div class="add-to-fridge-btn">
+      <%= link_to "Ajouter à mon frigo", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] } %>
+    </div>
   </div>
-<% end %>
+    <% end %>
