--- a/app/views/ingredients/results.html.erb
+++ b/app/views/ingredients/results.html.erb
@@ -1,4 +1,4 @@
-<div class="main-container mt-4" data-controller="results">
+<div class="bg-content pt-4" data-controller="results">
   <div class="header-titre-subtitre">
     <div class="ingredients-generated-title">
       <%= image_tag("logo.png", class: "petite-carrote") %>
@@ -6,10 +6,7 @@
     </div>
 
     <div class="instruction">
-      <p class="m-0"> Ajoutez vos quantités !</p>
-    </div>
-
-    <div>
+      <p class="m-0"> Sélectionnez vos ingrédients !</p>
     </div>
 
     <div id="results-container"></div>
