--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -402,3 +402,13 @@ from {
 .modal-header {
   border: none;
 }
+
+.pic-form {
+  background-color: rgba(251, 221, 186, 0.95);
+  border-radius: 16px;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 25px;
+  font-family: 'Manrope';
+  font-weight: 900;
+}
