--- a/app/assets/stylesheets/pages/_show_cookbook.scss
+++ b/app/assets/stylesheets/pages/_show_cookbook.scss
@@ -17,8 +17,9 @@
   text-decoration: none;
 }
 
-.fa-trash-can:active {
-  color: red;
+
+.fa-trash-can:hover {
+  color: #cacaca;
   // transition: color 2s ease-out;
 }
 
