--- a/app/views/recipes/_content.html.erb
+++ b/app/views/recipes/_content.html.erb
@@ -77,7 +77,7 @@
                 <% end %>
               </div>
 
-                <h3 class="mb-0 mt-2">`
+                <h3 class="mb-0 mt-2">
                   <i class="fa-solid fa-clock"></i>
                   <%= recipe["preptime"].to_i + recipe["cooking_time"].to_i  unless recipe["preptime"].nil? %> minutes
                 </h3>
