--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -87,7 +87,7 @@
       <div class="liste-ingredients">
         <ul class="">
           <% @recipe.ingredients.each do |ingredient| %>
-            <li><%= image_tag("list-krot.png", class: "petite-carrote") %><%=ingredient%></li>
+            <li><%= image_tag("carrot-mange.png", class: "petite-carrote-list me-2") %><%=ingredient%></li>
           <% end  %>
         </ul>
       </div>
