--- a/app/views/ingredients/_results.html.erb
+++ b/app/views/ingredients/_results.html.erb
@@ -1,11 +1,21 @@
 
 <% ingredients.each do |ingredient| %>
-  <div class="col-12 col-sm-6 col-md-4">
-    <div class="card_design" id="ingredient-card">
-      <h2 class="title_layout pl-5"><%= ingredient["name"] %></h2>
-    </div>
-    <div class="add-to-fridge-btn">
-      <%= link_to "Ajouter à mon frigo", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] } %>
-    </div>
+
+    <%# <div class="ingredient-card">
+      <%# <h2 class="generation_title"><%= ingredient["name"] %>
+        <%# <div class="">
+          <%= link_to "+", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] }, class:"bi bi-plus-circle" %>
+        <%# </div>
+    </div> %>
+
+
+
+<div class="card text-center bg-light-subtle rounded-4 mb-3 border border-0" style="width: 18rem;">
+  <div class="card-body">
+     <h2 class="generation_title fw-semibold"><%= ingredient["name"] %></h2>
+
+    <%= link_to "Ajouter", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] } %>
   </div>
-    <% end %>
+</div>
+
+<% end %>
