--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -411,3 +411,13 @@ from {
   font-family: 'Manrope';
   font-weight: 900;
 }
+
+
+.fa-heart {
+  color: #F28E19;
+
+}
+
+.fa-heart:hover {
+  color: rgb(197, 197, 197);
+}
