--- a/app/assets/stylesheets/components/_results_ingredient_generated.scss
+++ b/app/assets/stylesheets/components/_results_ingredient_generated.scss
@@ -1,11 +1,11 @@
-.generation_title {
-  color: #000;
-  font-family: Manrope;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
-}
+// .generation_title {
+//   color: #000;
+//   font-family: Manrope;
+//   font-size: 30px;
+//   font-style: normal;
+//   font-weight: 800;
+//   line-height: normal;
+// }
 
 
 .ingredient-card {
