--- a/app/views/ingredients/add_an_image.html.erb
+++ b/app/views/ingredients/add_an_image.html.erb
@@ -14,7 +14,7 @@
         <%= form.label :photo, "Prenez votre frigo en photo !", class: "add-fridge" %>
       </div>
 
-      <%= form.file_field :photo, accept: 'image/jpeg,image/jpg' %>
+      <%= form.file_field :photo, accept: 'image/jpeg,image/jpg', class: "custom-file-field"%>
 
       <br>
 
