--- a/app/views/ingredients/results.html.erb
+++ b/app/views/ingredients/results.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div class="instruction">
-      <p class="m-0"> Sélectionnez vos ingrédients !</p>
+      <p class="text-center m-0"> Sélectionnez vos ingrédients !</p>
     </div>
 
     <div id="results-container">
