--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -27,7 +27,7 @@
 
         <div class="logo mt-5">
           <div class="rotating" style="width: 100px; height: 100px; line-height: 100px; text-align: center;">
-          <%= image_tag("carrot-logo.png", class: "image-logo") %>
+          <%= image_tag("reverse-krot.png", class: "image-logo") %>
           </div>
         </div>
       </div>
