--- a/app/views/ingredients/_results.html.erb
+++ b/app/views/ingredients/_results.html.erb
@@ -1,4 +1,8 @@
 
+   <div class="instruction">
+      <p class="m-0"> Sélectionnez vos ingrédients !</p>
+    </div>
+
 <% ingredients.each do |ingredient| %>
 
     <%# <div class="ingredient-card">
@@ -19,3 +23,7 @@
 </div>
 
 <% end %>
+
+ <button class="btn-patate-forme" id="validate-fridge-button">Valider mon frigo</button>    </div>
+  </div>
+</div>
