--- a/app/views/ingredients/results.html.erb
+++ b/app/views/ingredients/results.html.erb
@@ -5,15 +5,34 @@
       <h1 class="title-frigo">INGRÉDIENTS GÉNÉRÉS</h1>
     </div>
 
-    <div class="instruction">
+    <%# <div class="instruction">
       <p class="m-0"> Sélectionnez vos ingrédients !</p>
-    </div>
+    </div> %>
 
     <div id="results-container">
-      <%# spinner --------------- %>
-  </div>
+      <%# spinner ici ----------- %>
 
-<%# fin spinner ------------------ %>
- <button class="btn-patate-forme" id="validate-fridge-button">Valider mon frigo</button>    </div>
+     <div class="loader-overlay-ingredients mt-5" data-loader-target="loader">
+      <div class="overlay" onclick="showSpinner()">
+
+      </div>
+
+      <div class="message content hidden">
+        <h1 class="p-5 text-center loader-text"> On cherche de délicieuses recettes ...</h1>
+
+        <div class="logo mt-5">
+          <div class="rotating" style="width: 100px; height: 100px; line-height: 100px; text-align: center;">
+          <%= image_tag("carrot-logo.png", class: "image-logo") %>
+          </div>
+        </div>
+      </div>
+      </div>
+
+  <%# Fin spinner ------------ %>
+
+    </div>
+
+
+ <%# <button class="btn-patate-forme" id="validate-fridge-button">Valider mon frigo</button>    </div>
   </div>
-</div>
+</div> %>
