--- a/app/assets/stylesheets/components/add_an_image_form.scss
+++ b/app/assets/stylesheets/components/add_an_image_form.scss
@@ -7,6 +7,7 @@
   font-weight: bold;
   font-size: 18px;
   font-family: 'Manrope', sans-serif;
+
 }
 
 .pic-form {
@@ -17,4 +18,10 @@
   align-items: center;
   height: 380px;
   width: 366px;
+
+}
+
+
+h3, .texte-photo-frigo {
+  font-size: 20px;
 }
