--- a/app/views/ingredients/add_an_image.html.erb
+++ b/app/views/ingredients/add_an_image.html.erb
@@ -7,14 +7,21 @@
     </div>
   </div>
     <br>
+
   <div class=" pic-form flex- pe-0 mt-3 ps-0 mr-3">
     <%= form_with model: @ingredient, url: analyze_image_ingredients_path, method: :post, html: { multipart: true, class: 'pic-form' } do |form| %>
 
       <div class="download-picture pb-3">
-        <%= form.label :photo, "Prenez votre frigo en photo !", class: "add-fridge" %>
+        <%= form.label :photo, "Prenez votre frigo en photo !", class: "add-fridge" do %>
+        <h3 class="texte-photo-frigo d-flex align-items-center justify-content-center">Prenez une photo de votre frigo</h3>
+          <div style="font-size: 60px; display: flex; align-items: center; justify-content: center;">
+             📸
+          </div>
+
+        <% end %>
       </div>
 
-      <%= form.file_field :photo, accept: 'image/jpeg,image/jpg' %>
+        <%= form.file_field :photo, accept: 'image/jpeg,image/jpg', class: "add-photo-file d-none" %>
 
       <br>
 
