--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -23,7 +23,8 @@
 
 
     <div class="">
-      <%= link_to "Ajouter un produit", new_ingredient_path, class:"btn-patate"%>
+      <%#= link_to "Ajouter un produit", new_ingredient_path, class:"btn-patate"%>
+       <%= link_to "Scaner mon frigo", add_an_image_ingredients_path, class:"btn-patate"%>
     </div>
   </div>
 
