--- a/app/views/ingredients/_results.html.erb
+++ b/app/views/ingredients/_results.html.erb
@@ -20,7 +20,7 @@
       <%= image_tag("marmite.png", class: "vegetable") %>
         <p class="generation_title fw-semibold"><%= ingredient["name"] %>
         </p>
-        <%= link_to "", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] }, class:"fa-regular fa-square-plus"%>
+        <%= link_to "", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] }, class:"fa-regular fa-square-plus fa-2xl"%>
     </div>
   </div>
 
