--- a/app/views/ingredients/_results.html.erb
+++ b/app/views/ingredients/_results.html.erb
@@ -10,7 +10,7 @@
 
 <div class="card-design" style="card-design">
   <div class="card-body">
-    <%= image_tag("marmite.png", class: "vegetable") %>
+    <%= image_tag(ingredient_img(ingredient["name"]), class: "vegetable") %>
     <p class="generation_title fw-semibold"><%= ingredient["name"] %></p>
 
     <%= link_to "", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] }, class:"fa-solid fa-plus"%>
