--- a/app/views/ingredients/_results.html.erb
+++ b/app/views/ingredients/_results.html.erb
@@ -1,10 +1,10 @@
 <div  data-controller="results">
 
-<div class="instruction">
-  <p class="m-0"> Sélectionnez vos ingrédients !</p>
-</div>
+  <div class="instruction">
+    <p class="m-0"> Sélectionnez vos ingrédients !</p>
+  </div>
 
-<% ingredients.each do |ingredient| %>
+  <% ingredients.each do |ingredient| %>
 
 
     <%# <div class="ingredient-card">
@@ -15,14 +15,16 @@
     </div> %>
 
 
-<div class="card-design" style="card-design">
-  <div class="card-body">
-    <%= image_tag(ingredient_img(ingredient["name"]), class: "vegetable") %>
-        <p class="generation_title fw-semibold"><%= ingredient["name"] %>
-        </p>
-        <%= link_to "", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] }, class:"fa-regular fa-square-plus fa-2xl"%>
-<% end %>
+  <div class="card-design" style="card-design">
+    <div class="card-body">
+      <%= image_tag(ingredient_img(ingredient["name"]), class: "vegetable") %>
+      <p class="generation_title fw-semibold"><%= ingredient["name"] %></p>
 
- <button class="btn-patate-forme" id="validate-fridge-button">Valider mon frigo</button>
+          <%= link_to "", add_ingredients_path, data: { turbo_method: :post, action: "click->results#add", results_ingredient_name_param: ingredient["name"] }, class:"fa-regular fa-square-plus fa-2xl"%>
+    </div>
+  </div>
+  <% end %>
+
+  <button class="btn-patate-forme" id="validate-fridge-button">Valider mon frigo</button>
 
 </div>
