--- a/app/views/ingredients/_results.html.erb
+++ b/app/views/ingredients/_results.html.erb
@@ -1,7 +1,7 @@
 <div  data-controller="results">
 
   <div class="instruction">
-    <p class="m-0"> Sélectionnez vos ingrédients !</p>
+    <p class="m-0 mb-2"> Sélectionnez vos ingrédients !</p>
   </div>
 
   <% ingredients.each do |ingredient| %>
